// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with enabled comments 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderStyle": "solid",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 25,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 27,
              "lineHeight": 29,
              "maxWidth": 315,
              "paddingBottom": 10,
              "paddingTop": 30,
              "textAlign": "center",
            }
          }
        >
          65 comments
        </Text>
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 17,
              "maxWidth": 280,
              "textAlign": "center",
            }
          }
        >
          Comments are subject to our community guidelines, which can be viewed 
          <Text
            style={
              Object {
                "color": "#006699",
                "textDecorationLine": "underline",
              }
            }
          >
            here
          </Text>
        </Text>
        <Button
          style={
            Object {
              "marginBottom": 0,
              "marginTop": 25,
              "maxWidth": 215,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. a full article with disabled comments 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 06:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderStyle": "solid",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 25,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 27,
              "lineHeight": 29,
              "maxWidth": 315,
              "paddingBottom": 10,
              "paddingTop": 30,
              "textAlign": "center",
            }
          }
        >
          Comments for this article have been turned off
        </Text>
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 17,
              "maxWidth": 280,
              "textAlign": "center",
            }
          }
        >
          For more details, please see our 
          

          <Text
            style={
              Object {
                "color": "#006699",
                "textDecorationLine": "underline",
              }
            }
          >
            community guidelines
          </Text>
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
